--- a/slides/05_advanced_data_import.Rmd
+++ b/slides/05_advanced_data_import.Rmd
@@ -75,7 +75,7 @@ There are four main considerations for data import:
 
 --
 
-3. How: with base R functions or a specialised package? Are the data available through an API and if so, is there already a package to make access to it easier?
+3. How: with base R functions or a specialised package? Are the data available through an API and if so, is there already a package to access it?
 
 --
 
@@ -113,13 +113,19 @@ This section may be familiar to those with experience. You may want to skip ahea
 
 Data file: [structurepred.txt](raw_data/structurepred.txt)
 
-These data are root mean square deviations (RMSD) in $\unicode{x212B}$ngstrom ( $\unicode{x212B}$ ) between predicted and actual protein structures. Three programs were used to make predictions for 30 proteins.
+These data are root mean square deviations (RMSD) in $\unicode{x212B}$ngstrom between predicted and actual protein structures. Three programs were used to make predictions for 30 proteins.
+
+--
+
+There are three columns: rmsd, prog and prot
 
 --
 
 `r emo::ji("clapper")` Save a copy of the file to your `raw_data` folder and read it in with:
+
+--
+
 ```{r}
-getwd()
 file <- "raw_data/structurepred.txt"
 protein_struc <- read_table(file)
 
@@ -151,8 +157,15 @@ protein_struc <- read_table2(file)
 ```
 
 .footnote[
-`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out.......
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out try reading in these data: [csativa.txt](raw_data/csativa.txt).
+
+```{r echo=FALSE}
+file2 <- "raw_data/csativa.txt"
+csat <- read_table2(file2, skip = 5)
+```
 ]
+
+
 --
 
 A function that can save you having to open a text file to look or wait along time to discover an import failure is `readLines()`:
@@ -199,7 +212,13 @@ icd <- read_table2(file)
 ```
 
 .footnote[
-`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out.......
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out try reading in these data: [grape.txt](raw_data/grape.txt).
+
+```{r echo=FALSE}
+file2 <- "raw_data/grape.txt"
+grape <- read_delim(file2, delim = "/")
+```
+
 ]
 ---
 # Locally stored text files
@@ -216,6 +235,18 @@ readLines(file, n = 2)
 ```
 
 It is not uncommon for people to use file extensions that are misleading so don't assume it is what it says on the tin `r emo::ji("spy")`
+
+---
+# Locally stored text files
+
+## Exercise 2
+
+`r emo::ji("clapper")`The most appropriate `readr` function is `read_table2()` again:
+```{r}
+file <- "raw_data/Icd10Code.csv"
+icd <- read_table2(file)
+```
+
 
 ---
 # Locally stored special formats.
@@ -267,7 +298,6 @@ periwinkle <- read_sav(file)
 .scroll-output-height[
 `r emo::ji("clapper")` Examine the result.
 ```{r}
-
 str(periwinkle)
 ```
 ]
@@ -305,17 +335,28 @@ periwinkle <- periwinkle %>%
 --
 
 `r emo::ji("clapper")` Write the dataframe to a plain text format file in your `processed_data` folder.
-```{r echo=FALSE}
+
+.footnote[
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out try reading in these data: [carsdata.dta](raw_data/carsdata.dta).
+
+]
+---
+# Locally stored special formats.
+
+You can write the dataframe to a plain text format file in your `processed_data` folder like this:
+
+```{r}
 write.table(periwinkle, "processed_data/periwinkle.txt")
 ```
 
-.footnote[
-`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out.......
-]
 --
 
-`r emo::ji("eyes")` There are `read_dta()` and `read_sas()` functions for STATA and SAS files respectively.
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)` `r emo::ji("eyes")` There are `read_dta()` and `read_sas()` functions for STATA and SAS files respectively so: 
 
+```{r}
+file2 <- "raw_data/carsdata.dta"
+cars <- read_dta((file2))
+```
 
 ---
 # Reading multiple files
@@ -426,7 +467,7 @@ airquality <- do.call(rbind, df_list)
 The two main differences in this method are that `map()` dispenses with the need for a `for` loop (and for a pre-allocated vector) and we can use the pipe to link operations.
 
 --
-
+`r emo::ji("clapper")` Read the files and combine them:
 ```{r}
 airquality2 <- files %>% 
   map(read_csv) %>%
@@ -435,6 +476,16 @@ airquality2 <- files %>%
 
 --
 I replaced the base R functions `read.csv` and `do.call(rbind())` with tidyverse functions in addition.
+
+--
+
+There's actually a `tidyverse` short cut for `map(read_csv) %>% bind_rows`
+
+```{r}
+airquality3 <- files %>% 
+  map_dfr(read_csv) 
+```
+
 
 ---
 # Files on the internet
@@ -458,10 +509,13 @@ http://www.ndbc.noaa.gov/view_text_file.php?filename=44025h2011.txt.gz&dir=data/
 ## Example
 
 `r emo::ji("clapper")` Use `readLines()` to examine the data format.
+
+
 ```{r}
 file <- "http://www.ndbc.noaa.gov/view_text_file.php?filename=44025h2011.txt.gz&dir=data/historical/stdmet/"
+```
 
-# use readLines() data format: 
+```{r}
 readLines(file, n = 4)
 ```
 
@@ -481,8 +535,13 @@ buoy44025 <- read_table(file, col_names = FALSE, skip = 2)
 
 --
 
-`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)` Use `scan()` to read in the appropriate lines then [tidy](04_tidying_data_and_the_tidyverse.html) the results and name the columns measure_units, for example
-```{r echo=FALSE}
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)` Use `scan()` to read in the appropriate lines then tidy  the results and name the columns measure_units, for example. [Tidying data and the tidyverse including the pipe](04_tidying_data_and_the_tidyverse.html) might help.
+
+---
+# Files on the internet
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)` Use `scan()` to read in the appropriate lines then tidy the results and name the columns measure_units, for example.
+
+```{r}
 # read in the variable names from the first line, removing the hash
 measure <- scan(file, nlines = 1, what = character()) %>%
   str_remove("#")
@@ -574,7 +633,7 @@ A box will appear on the right including the full page source.
 `r emo::ji("clapper")` Now download and parse the html file using `read_html`, extract the text at the copied selector using `html_nodes()`, process the text in to a list using `html_table()` and get the dataframe which is the first(and only) element of that list:
 
 ```{r}
-test <- read_html(url) %>%
+biodiv <- read_html(url) %>%
   html_nodes(css = '#mw-content-text > div > table') %>%
   html_table() %>% 
   .[[1]]
@@ -662,7 +721,7 @@ In R `httr` is one package that allows you create requests
 
 ## Terminology: Requests
 
-An API requests consists of:
+An API request like `http://gtr.rcuk.ac.uk/search/project?term=virus&page=1&fetchSize=100` consists of:
   
 * a URL  
   `r kableExtra::text_spec("http://gtr.rcuk.ac.uk/search/", background = "#D0DEE6",     )`project?term=virus&page=1&fetchSize=100
@@ -686,13 +745,13 @@ An API requests consists of:
 
 ## Terminology: Responses
 
-An API response is usually returned in either:
+An API response is usually returned in one of two formats:
 
 1. JavaScript Object Notification (JSON) 
 
 --
 
-2. Extensible Markup Language (XML) are the most common answer formats.
+2. Extensible Markup Language (XML) 
 
 --
 
@@ -805,13 +864,11 @@ explore
 
 `r emo::ji("clapper")` Make the request using the query:
 ```{r}
-# httr::GET makes the request
 results <- GET(explore)
 ```
 
 `r emo::ji("clapper")` Process the JSON response into an R data structure:
 ```{r}
-# httr::GET makes the request
 data <- results %>%
   content("text") %>%
   fromJSON()
@@ -824,14 +881,14 @@ data <- results %>%
 
 ### An exploratory query to determine additional search parameters
 
+`r emo::ji("clapper")` Examine the `data` list. 
+
+### Demo
+
 ---
 # APIs
 
 ## Constructing the query
-
-`r emo::ji("clapper")` Examine the `data` list.
-
---
 
 Having worked out what the id codes are for research grants, the BBSRC and 2020 we will want to add those to our query.
 
@@ -868,11 +925,12 @@ The ids must be in a list separated by commas, and then encoded.
 
 `r emo::ji("clapper")` Create a variable for the selectedFacets parameter by pasting the codes together separated by a comma, then encoding:
 ```{r}
-selectedFacets <- URLencode(paste(research,
-                                  bbsrc, 
-                                  y2020, 
-                                  sep=","),
-                            reserved = TRUE)
+selectedFacets <- paste(research,
+                        bbsrc, 
+                        y2020, 
+                        sep = ",") %>%
+  URLencode()
+
 ```
 
 ---
@@ -889,7 +947,6 @@ call1 <- paste(base, endpoint,"?",
                "selectedFacets=", selectedFacets,
                sep="")
 ```
-https://gtr.ukri.org/search/project?term=virus&fetchSize=25&selectedSortableField=&selectedSortOrder=&fields=&type=&selectedFacets=Y2F0fFJlc2VhcmNoIEdyYW50fHN0cmluZw%3D%3D%2CZnVuZGVyfEJCU1JDfHN0cmluZw%3D%3D%2Cc3RhcnR8MTU3NzgzNjgwMDAwMF8xNjA5NDU5MTk5MDU5fHJhbmdl
 --
 
 
@@ -906,7 +963,6 @@ call1
 
 `r emo::ji("clapper")` We use the GET function in the same way as for our exploratory query:
 ```{r}
-# httr::GET makes the request
 results <- GET(call1)
 ```
 
@@ -920,6 +976,14 @@ results$status_code
 
 --
 
+200 means everything is OK. 
+
+[List of HTTP status codes](https://en.wikipedia.org/wiki/List_of_HTTP_status_codes). You've almost certainly seen a 404 before.
+
+---
+# APIs
+
+## Running the query
 `r emo::ji("clapper")` Extract the content of the response and parse it from JSON to an R structure.
 
 ```{r}
@@ -927,9 +991,6 @@ data <- results %>%
   content("text") %>%
   fromJSON()
 ```
-
----
-# APIs
 
 `r emo::ji("clapper")` Examine your results:
 ```{r}
@@ -939,7 +1000,15 @@ data$searchResult$resourceHitCount
 ---
 # Summary
 
-
+* Consider whether the data are locally or remotely stored, their format, whether they are in one file or several or distributed across other resources.  
+* If you use some form of database that presents information in your browser, check whether it has an API, then whether there are existing packages to access that API.  
+* plain text files can be read in with base R, readr or data.table methods (and more)  
+* other formats can usually be imported specialised packages  
+* use iteration to import multiple files (rather than copying and pasting import statements)  
+* files on the internet are imported in the same way as those stored locally  
+* some form of tidying is almost always required  
+* `rvest` allows you to scrape data from webpages is you can identify the CSS selector
+* an API allows programmatic access to a data repository  
 
 
 ---
