--- a/slides/02_intro_to_r_and_working_with_data.Rmd
+++ b/slides/02_intro_to_r_and_working_with_data.Rmd
@@ -1299,7 +1299,10 @@ ggplot(data = pigeon2, aes(x = population, y = distance)) +
 
 ---
 # References
+.footnote[
+Slides made with with xaringan `r Cite(myBib, "xaringan")`
 
+]
 ```{r refs, echo=FALSE, results="asis"}
 PrintBibliography(myBib)  
 ```
