--- a/slides/03_rstudio_projects.Rmd
+++ b/slides/03_rstudio_projects.Rmd
@@ -355,7 +355,10 @@ This session has set you up for the [Tidying data and the tidyverse including th
 
 ---
 # References
+.footnote[
+Slides made with with xaringan `r Cite(myBib, "xaringan")`
 
+]
 ```{r refs, echo=FALSE, results="asis"}
 PrintBibliography(myBib)
 ```
