--- a/slides/04_tidying_data_and_the_tidyverse.Rmd
+++ b/slides/04_tidying_data_and_the_tidyverse.Rmd
@@ -685,6 +685,10 @@ sol2 <- sol2 %>%
 
 ---
 # References
+.footnote[
+Slides made with with xaringan `r Cite(myBib, "xaringan")`
+
+]
 
 ```{r refs, echo=FALSE, results="asis"}
 PrintBibliography(myBib)
