--- a/slides/05_advanced_data_import.Rmd
+++ b/slides/05_advanced_data_import.Rmd
@@ -1014,10 +1014,14 @@ data$searchResult$resourceHitCount
 ---
 # References
 
+.footnote[
+Slides made with with xaringan `r Cite(myBib, "xaringan")`
+
+]
+
 ```{r refs, echo=FALSE, results="asis"}
 PrintBibliography(myBib)
 ```
-
 
 
 ---
