--- a/slides/03_rstudio_projects.Rmd
+++ b/slides/03_rstudio_projects.Rmd
@@ -81,7 +81,11 @@ A path can be **absolute** or **relative**
 An Absolute path is given from the root directory of the object. 
 
 For example the absolute path for a file, `beewing.txt` can be:  
-  * windows: `M:/web/58M_BDS_2019/data/beewing.txt`  
+  * windows: `M:/web/58M_BDS_2019/data/beewing.txt`  <sup>1</sup>
+
+.footnote[
+1. this appears as `M:\web\58M_BDS_2019\data\beewing.txt` in Windows Explorer because Microsoft DOS didn't have directories in 1981 when it was released. It then used the `/` character for 'switches' (instead of the unix convention `-`)
+]
 --
 
   * unix systems: `/users/er13/web/58M_BDS_2019/data/beewing.txt`  
