module 06 complete except figure

--- a/refs.bib
+++ b/refs.bib
@@ -367,3 +367,13 @@
     note = {R package version 0.3.5},
     url = {https://CRAN.R-project.org/package=rvest},
   }
+  
+  @Book{bookdown,
+    title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    address = {Boca Raton, Florida},
+    year = {2016},
+    note = {ISBN 978-1138700109},
+    url = {https://github.com/rstudio/bookdown},
+  }
