--- a/seals/reference.bib
+++ b/seals/reference.bib
@@ -44,3 +44,19 @@ author = "S.R. Noren and T.M. Williams",
 keywords = "Cetaceans, Myoglobin, Body size, Diving capacity, Odontocetes, Mysticetes",
 abstract = "Cetaceans exhibit an exceptionally wide range of body mass that influence both the capacities for oxygen storage and utilization; the balance of these factors is important for defining dive limits. Furthermore, myoglobin content is a key oxygen store in the muscle as it is many times higher in marine mammals than terrestrial mammals. Yet little consideration has been given to the effects of myoglobin content or body mass on cetacean dive capacity. To determine the importance of myoglobin content and body mass on cetacean diving performance, we measured myoglobin content of the longissimus dorsi for ten odontocete (toothed whales) and one mysticete (baleen whales) species ranging in body mass from 70 to 80.000 kg. The results showed that myoglobin content in cetaceans ranged from 1.81 to 5.78 g (100 g wet muscle)???1. Myoglobin content and body mass were both positively and significantly correlated to maximum dive duration in odontocetes; this differed from the relationship for mysticetes. Overall, the combined effects of body mass and myoglobin content accounts for 50% of the variation in cetacean diving performance. While independent analysis of the odontocetes showed that body mass and myoglobin content accounts for 83% of the variation in odontocete dive capacity."
 }  
+  @Book{bookdown,
+    title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    address = {Boca Raton, Florida},
+    year = {2016},
+    note = {ISBN 978-1138700109},
+    url = {https://github.com/rstudio/bookdown},
+  }
+   @Manual{markdown1,
+    title = {rmarkdown: Dynamic Documents for R},
+    author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+    year = {2019},
+    note = {R package version 1.16},
+    url = {https://github.com/rstudio/rmarkdown},
+  }
